# agents-mcp-bootcamp

./: .env  Makefile  README.md  STEP-0.md  STEP-1.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
src/amcp/: config.py  db.py  main.py  step_1_simple_agent.py
