[project]
name = "agents-mcp-bootcamp"
version = "0.1.0"
description = "Agents + MCP bootcamp backend"
authors = [
    {name = "hgumroyan",email = "h.gumroyan@criteo.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.43,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "amcp", from = "src" }]

[tool.poetry.group.agents.dependencies]
langchain = "^0.3.27"
openai = "^1.101.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.12.10"
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E","F","I","UP","B","SIM"]

